Revert "config panel dark mode fix (#1169) (#1176)"
This reverts commit 34696b31e1ad861aad76357727c7418040087aaf.

--- a/public/components/event_analytics/explorer/visualizations/config_panel/config_panel.scss
+++ b/public/components/event_analytics/explorer/visualizations/config_panel/config_panel.scss
@@ -194,9 +194,4 @@ $vis-editor-sidebar-min-width: 350px;
   .panel_section, .cp__rightHeader {
     border-bottom: 1px solid $border-color-on-dark;
   }
-
-  .panelItem_box {
-    color: #8D98A3;
-    background-color: #293847;
-  }
 }
